[package]
name = "sandbox"
version = "0.1.0"
authors = ["jasilven <jasilven@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bencode_rs = { git = "https://github.com/jasilven/bencode_rs", tag = "v0.1.0" }
reqwest = { version = "0.10", features = ["blocking", "json"] }
serde = "1.0"
serde_json = { version = "1.0"}
anyhow = { version = "1.0"}
natsio = "0.3.2"
edn = { git = "https://github.com/jasilven/edn.rs", branch = "namespaced-map" }
futures = "0.3"
rustyline = "6.1.2"
rustyline-derive = "0.3.1"
structopt = "0.3"
tuikit = "*"
tide = "0.13.0"
async-std = { version = "1.6", features = ["attributes"] }
tokio = { version = "0.2", features = ["full"] }
chrono = "0.4.15"
